--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,15 @@
-htaccess file content   
-  
-<VirtualHost *:80>  
-  
-        ServerAdmin webmaster@localhost  
-        DocumentRoot /var/www/html/web 
-        <Directory /var/www/html/web>  
-                        Options Indexes FollowSymLinks  
-                        AllowOverride All  
-                        Require all granted  
-        </Directory>  
-  
-        ErrorLog ${APACHE_LOG_DIR}/error.log  
-        CustomLog ${APACHE_LOG_DIR}/access.log combined  
-  
-</VirtualHost>  
+server {
+        listen 80 default_server;
+        root /var/www/html/web;
+
+        server_name     test-1.asu.lol;
+
+        location / {
+                try_files $uri $uri/ /index.php?$args;
+        }
+
+        location ~ \.php$ {
+        include snippets/fastcgi-php.conf;
+        fastcgi_pass unix:/run/php/php7.4-fpm.sock;
+    }
+}
